--- a/blog.html
+++ b/blog.html
@@ -108,7 +108,7 @@
       <h2 class="text-3xl font-bold text-center mb-12">Latest Articles</h2>
       <div class="grid gap-8 sm:grid-cols-2 lg:grid-cols-3">
         <article class="bg-white rounded-xl shadow hover:shadow-lg overflow-hidden transition">
-          <img src="C:\Users\Yukesh\Downloads\a1.png" alt="" class="w-full h-44 object-cover" />
+          <img src="a1.png" alt="" class="w-full h-44 object-cover" />
           <div class="p-6">
             <h3 class="font-semibold text-xl mb-2">Intro to Tailwind</h3>
             <p class="text-gray-600 mb-4">Utility classes, no config, fast design. Get started now.</p>
@@ -116,7 +116,7 @@
           </div>
         </article>
         <article class="bg-white rounded-xl shadow hover:shadow-lg overflow-hidden transition">
-          <img src="C:\Users\Yukesh\Downloads\a2.png" alt="" class="w-full h-44 object-cover" />
+          <img src="a2.png" alt="" class="w-full h-44 object-cover" />
           <div class="p-6">
             <h3 class="font-semibold text-xl mb-2">Responsive Layouts</h3>
             <p class="text-gray-600 mb-4">Learn the breakpoints, grids, and stacks that adapt to any device.</p>
@@ -124,7 +124,7 @@
           </div>
         </article>
         <article class="bg-white rounded-xl shadow hover:shadow-lg overflow-hidden transition">
-          <img src="C:\Users\Yukesh\Downloads\a3.png" alt="" class="w-full h-44 object-cover" />
+          <img src="a3.png" alt="" class="w-full h-44 object-cover" />
           <div class="p-6">
             <h3 class="font-semibold text-xl mb-2">Tailwind vs Bootstrap</h3>
             <p class="text-gray-600 mb-4">Compare utility-first vs component-driven CSS frameworks in 2025.</p>
