--- a/article1.html
+++ b/article1.html
@@ -17,7 +17,7 @@
   <!-- Header -->
   <header class="bg-white shadow-md sticky top-0 z-50">
     <div class="container mx-auto px-4 py-4 flex justify-end items-center">
-      <a href="blog.html" class="text-2xl font-bold text-indigo-600">Home</a>
+      <a href="index.html" class="text-2xl font-bold text-indigo-600">Home</a>
     </div>
   </header>
 
