--- a/article3.html
+++ b/article3.html
@@ -14,14 +14,12 @@
 </head>
 <body class="bg-gray-50 text-gray-800">
 
-  <!-- Header -->
   <header class="bg-white shadow-md sticky top-0 z-50">
     <div class="container mx-auto px-4 py-4 flex justify-end items-center">
-      <a href="blog.html" class="text-2xl font-bold text-indigo-600">Home</a>
+      <a href="index.html" class="text-2xl font-bold text-indigo-600">Home</a>
     </div>
   </header>
 
-  <!-- Main content -->
   <main>
     <section class="container mx-auto px-4 py-16 max-w-3xl">
       <article class="bg-white rounded-xl shadow p-6 sm:p-10">
@@ -68,7 +66,6 @@
     </section>
   </main>
 
-  <!-- Footer -->
   <footer class="bg-gray-900 text-gray-300 py-10 mt-16">
     <div class="container mx-auto px-4 text-center space-y-4">
       <p>&copy; 2025 Sri's Blog Site. All rights reserved.</p>
