--- a/index.html
+++ b/index.html
@@ -219,6 +219,31 @@
         toggleCircle.style.transform = 'translateX(0)';
       }
     });
+    // Popup functions
+function showPopup() {
+  document.getElementById('popup').classList.remove('hidden');
+}
+
+function closePopup() {
+  document.getElementById('popup').classList.add('hidden');
+}
+
+document.querySelectorAll('form').forEach(form => {
+  form.addEventListener('submit', function (e) {
+    e.preventDefault(); 
+    showPopup();
+    form.reset(); 
+  });
+});
+
   </script>
+<div id="popup" class="fixed inset-0 flex items-center justify-center bg-black bg-opacity-50 z-50 hidden">
+  <div class="bg-white dark:bg-gray-800 text-gray-800 dark:text-gray-100 p-6 rounded-xl shadow-lg max-w-sm text-center">
+    <h3 class="text-xl font-semibold mb-2">Thank you!</h3>
+    <p>Your submission has been received.</p>
+    <button onclick="closePopup()" class="mt-4 px-4 py-2 bg-indigo-600 hover:bg-indigo-700 text-white rounded">Close</button>
+  </div>
+</div>
+
 </body>
 </html>
