--- a/index.html
+++ b/index.html
@@ -1,249 +1,94 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Sri's Blog Site</title>
-  <script src="https://cdn.tailwindcss.com"></script>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
-  <style>
-    html { font-family: 'Poppins', sans-serif; }
-
-
-    .accordion-content { max-height: 0; overflow: hidden; transition: max-height 0.35s ease; }
-    input:checked ~ .accordion-content { max-height: 220px; }
-    #nav-toggle:checked ~ #nav-links { max-height: 500px; }
-
-
-    .dark body {
-      background-color: #1a202c; 
-      color: #e2e8f0; 
-    }
-
-    .dark header {
-      background-color: #2d3748; 
-    }
-
-    .dark aside {
-      background-color: #4c51bf;
-    }
-
-    .dark a:hover {
-      color: #c3dafe; 
-    }
-
-    #toggle-switch {
-      width: 48px;
-      height: 24px;
-      background-color: #d1d5db; 
-      border-radius: 9999px;
-      position: relative;
-      cursor: pointer;
-      transition: background-color 0.3s ease;
-    }
-    #toggle-switch div {
-      width: 24px;
-      height: 24px;
-      background-color: white;
-      border-radius: 9999px;
-      position: absolute;
-      top: 0;
-      left: 0;
-      box-shadow: 0 0 3px rgba(0,0,0,0.3);
-      transition: transform 0.3s ease;
-    }
-  </style>
+  <meta charset="UTF-8">
+  <title>TechNest</title>
+  <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 </head>
-<body class="bg-gray-50 text-gray-800">
-
-  <header class="bg-white shadow-md sticky top-0 z-50">
-    <div class="container mx-auto px-4 py-4 flex justify-between items-center">
-      <a href="#" class="text-2xl font-bold text-indigo-600">Sri's Blog Site</a>
-
-
-      <div class="flex items-center space-x-2 select-none text-gray-700">
-        <label for="theme-toggle" class="cursor-pointer">Theme</label>
-        <input type="checkbox" id="theme-toggle" class="hidden" />
-        <div id="toggle-switch">
-          <div></div>
-        </div>
-      </div>
-    </div>
-  </header>
-
-  <aside class="hidden lg:block fixed top-[64px] left-0 w-56 h-[calc(100%-64px)] bg-indigo-600 text-white p-6 overflow-auto">
-    <nav class="space-y-4">
-      <a href="#" class="block hover:underline">Home</a>
-      <a href="#blog" class="block hover:underline">Blog</a>
-      <a href="#faq" class="block hover:underline">FAQ</a>
-      <a href="#contact" class="block hover:underline">Contact</a>
+<body>
+<div class="container max-w-full">
+<div class=" bg-indigo-500 p-15 flex items-center justify-between"><h1 class="text-4xl font-bold italic text-yellow-300">TechNest</h1>
+<nav class="space-x-6">
+      <a href="#home" class="text-white hover:text-yellow-300 font-bold italic">Home</a>
+      <a href="#articles" class="text-white hover:text-yellow-300 font-bold italic">Articles</a>
+      <a href="#faq" class="text-white hover:text-yellow-300 font-bold italic">FAQ</a>
+      <a href="#contact" class="text-white hover:text-yellow-300 font-bold italic">Contact</a>
     </nav>
-  </aside>
-
-  <main class="lg:ml-56">
-
-    <section class="bg-gradient-to-br from-indigo-600 to-purple-600 text-white">
-      <div class="container mx-auto px-4 py-20 text-center max-w-3xl">
-        <h1 class="text-4xl sm:text-5xl font-bold mb-4">Welcome to Sri's Blog Site</h1>
-        <p class="mb-8 text-lg opacity-90">Weekly insights and resources for creative developers and tech learners.</p>
-        <a href="#subscribe"
-          class="inline-block px-6 py-3 rounded-full bg-white text-indigo-700 font-semibold shadow hover:shadow-md transition">Subscribe
-          Now</a>
-      </div>
-    </section>
-
-    <section id="subscribe" class="container mx-auto px-4 -mt-12">
-      <div class="bg-white rounded-xl shadow-lg p-6 sm:p-10 text-center max-w-3xl mx-auto">
-        <h2 class="text-2xl font-semibold mb-2">Don’t miss a post</h2>
-        <p class="mb-6 text-gray-600">Join my newsletter to get dev tips weekly.</p>
-        <form class="flex flex-col sm:flex-row gap-4 justify-center">
-          <input type="email" required placeholder="Enter your email" class="flex-1 px-4 py-3 border rounded-md" />
-          <button type="submit"
-            class="px-6 py-3 bg-indigo-600 hover:bg-indigo-700 text-white rounded-md shadow">Subscribe</button>
-        </form>
-      </div>
-    </section>
-
-    <section id="blog" class="container mx-auto px-4 py-16">
-      <h2 class="text-3xl font-bold text-center mb-12">Latest Articles</h2>
-      <div class="grid gap-8 sm:grid-cols-2 lg:grid-cols-3">
-        <article class="bg-white rounded-xl shadow hover:shadow-lg overflow-hidden transition">
-          <img src="a1.png" alt="" class="w-full h-44 object-cover" />
-          <div class="p-6">
-            <h3 class="font-semibold text-xl mb-2">Intro to Tailwind</h3>
-            <p class="text-gray-600 mb-4">Utility classes, no config, fast design. Get started now.</p>
-            <a href="article1.html" class="text-indigo-600 font-medium hover:underline">Read more →</a>
-          </div>
-        </article>
-        <article class="bg-white rounded-xl shadow hover:shadow-lg overflow-hidden transition">
-          <img src="a2.png" alt="" class="w-full h-44 object-cover" />
-          <div class="p-6">
-            <h3 class="font-semibold text-xl mb-2">Responsive Layouts</h3>
-            <p class="text-gray-600 mb-4">Learn the breakpoints, grids, and stacks that adapt to any device.</p>
-            <a href="article2.html" class="text-indigo-600 font-medium hover:underline">Read more →</a>
-          </div>
-        </article>
-        <article class="bg-white rounded-xl shadow hover:shadow-lg overflow-hidden transition">
-          <img src="a3.png" alt="" class="w-full h-44 object-cover" />
-          <div class="p-6">
-            <h3 class="font-semibold text-xl mb-2">Tailwind vs Bootstrap</h3>
-            <p class="text-gray-600 mb-4">Compare utility-first vs component-driven CSS frameworks in 2025.</p>
-            <a href="article3.html" class="text-indigo-600 font-medium hover:underline">Read more →</a>
-          </div>
-        </article>
-      </div>
-    </section>
-
-    <section id="faq" class="container mx-auto px-4 py-16">
-      <h2 class="text-3xl font-bold text-center mb-10">Frequently Asked Questions</h2>
-      <div class="max-w-2xl mx-auto space-y-6">
-        <div class="bg-white rounded-lg shadow p-5">
-          <label class="block cursor-pointer">
-            <input type="checkbox" class="hidden peer" />
-            <div class="flex justify-between items-center">
-              <span class="font-semibold">What is Tailwind CSS?</span>
-              <svg class="w-5 h-5 text-gray-500 peer-checked:rotate-180 transition-transform" fill="none"
-                stroke="currentColor" stroke-width="2" viewBox="0 0 24 24" stroke-linecap="round"
-                stroke-linejoin="round">
-                <path d="M6 9l6 6 6-6" />
-              </svg>
-            </div>
-            <div class="accordion-content peer-checked:max-h-40 mt-2 text-gray-600">
-              Tailwind is a utility-first CSS framework for rapidly building custom designs.
-            </div>
-          </label>
-        </div>
-
-        <div class="bg-white rounded-lg shadow p-5">
-          <label class="block cursor-pointer">
-            <input type="checkbox" class="hidden peer" />
-            <div class="flex justify-between items-center">
-              <span class="font-semibold">Does it work with React?</span>
-              <svg class="w-5 h-5 text-gray-500 peer-checked:rotate-180 transition-transform" fill="none"
-                stroke="currentColor" stroke-width="2" viewBox="0 0 24 24" stroke-linecap="round"
-                stroke-linejoin="round">
-                <path d="M6 9l6 6 6-6" />
-              </svg>
-            </div>
-            <div class="accordion-content peer-checked:max-h-40 mt-2 text-gray-600">
-              Yes! Tailwind can be used in any framework—React, Vue, Svelte, and more.
-            </div>
-          </label>
-        </div>
-      </div>
-    </section>
-
-    <section id="contact" class="container mx-auto px-4 py-16">
-      <h2 class="text-3xl font-bold text-center mb-10">Let’s Connect</h2>
-      <form class="max-w-2xl mx-auto bg-white p-8 rounded-xl shadow space-y-6">
-        <div class="grid sm:grid-cols-2 gap-4">
-          <input type="text" placeholder="First name" class="px-4 py-3 border rounded-md w-full" required />
-          <input type="text" placeholder="Last name" class="px-4 py-3 border rounded-md w-full" required />
-        </div>
-        <input type="email" placeholder="Email address" class="px-4 py-3 border rounded-md w-full" required />
-        <textarea placeholder="Your message" rows="5" class="px-4 py-3 border rounded-md w-full" required></textarea>
-        <button
-          class="px-8 py-3 bg-indigo-600 hover:bg-indigo-700 text-white font-semibold rounded-md shadow w-full sm:w-auto">Send
-          Message</button>
-      </form>
-    </section>
-
-  </main>
-
-  <footer class="bg-gray-900 text-gray-300 py-10">
-    <div class="container mx-auto px-4 text-center space-y-4">
-      <p>&copy; 2025 Sri's Blog Site. All rights reserved.</p>
-    </div>
-  </footer>
-
-  <script>
-    const themeToggle = document.getElementById('theme-toggle');
-    const toggleSwitch = document.getElementById('toggle-switch');
-    const toggleCircle = toggleSwitch.querySelector('div');
-
-    
-    themeToggle.checked = false;
-    document.documentElement.classList.remove('dark');
-    toggleSwitch.style.backgroundColor = '#d1d5db'; 
-    toggleCircle.style.transform = 'translateX(0)';
-
-    toggleSwitch.addEventListener('click', () => {
-      themeToggle.checked = !themeToggle.checked;
-      if (themeToggle.checked) {
-        document.documentElement.classList.add('dark');
-        toggleSwitch.style.backgroundColor = '#4f46e5'; 
-        toggleCircle.style.transform = 'translateX(24px)';
-      } else {
-        document.documentElement.classList.remove('dark');
-        toggleSwitch.style.backgroundColor = '#d1d5db'; 
-        toggleCircle.style.transform = 'translateX(0)';
-      }
-    });
-    // Popup functions
-function showPopup() {
-  document.getElementById('popup').classList.remove('hidden');
-}
-
-function closePopup() {
-  document.getElementById('popup').classList.add('hidden');
-}
-
-document.querySelectorAll('form').forEach(form => {
-  form.addEventListener('submit', function (e) {
-    e.preventDefault(); 
-    showPopup();
-    form.reset(); 
-  });
-});
-
-  </script>
-<div id="popup" class="fixed inset-0 flex items-center justify-center bg-black bg-opacity-50 z-50 hidden">
-  <div class="bg-white dark:bg-gray-800 text-gray-800 dark:text-gray-100 p-6 rounded-xl shadow-lg max-w-sm text-center">
-    <h3 class="text-xl font-semibold mb-2">Thank you!</h3>
-    <p>Your submission has been received.</p>
-    <button onclick="closePopup()" class="mt-4 px-4 py-2 bg-indigo-600 hover:bg-indigo-700 text-white rounded">Close</button>
-  </div>
 </div>
+  <div class="w-full p-8 ">
+     <section id="home" class="bg-indigo-400 rounded-2xl py-20 mb-10 text-center hover:shadow-2xl hover:-translate-y-1 transition-all duration-300 ease-in-out">
+    <h2 class="text-5xl font-bold italic text-yellow-300 mb-4">Welcome to TechNest!</h2>
+    <p class="text-xl font-bold italic text-yellow-300">A mini blog with a collection of articles from wide range of tech topics!.</p>
+  </section>
 
+    <section id="articles" class="bg-indigo-400 rounded-2xl py-20 mb-10 text-center hover:shadow-2xl hover:-translate-y-1 transition-all duration-300 ease-in-out px-4 sm:px-6 lg:px-10">
+    <div class="max-w-7xl mx-auto grid grid-cols-1 md:grid-cols-3 gap-8">
+    <div class="bg-white rounded-2xl  flex flex-col justify-between h-fullshadow-lg p-8  hover:shadow-2xl hover:-translate-y-1 transition-all duration-300 ease-in-out">
+      <h3 class="text-2xl font-semibold italic mb-4">Introduction to Java</h3>
+      <p class="text-gray-700 mb-6 italic">Write once, run anywhere.</p>
+      <a href="https://www.geeksforgeeks.org/introduction-to-java/" class="text-indigo-600 font-medium italic hover:underline">Read More →</a>
+    </div>
+
+    <div class="bg-white rounded-2xl flex flex-col justify-between h-full shadow-lg p-8 hover:shadow-2xl hover:-translate-y-1 transition-all duration-300 ease-in-out">
+      <h3 class="text-2xl font-semibold Italic mb-4 italic">Introduction to Python</h3>
+      <p class="text-gray-700 mb-6 italic">Simple is better than complex.</p>
+      <a href="https://www.w3schools.com/python/python_intro.asp" class="text-indigo-600 font-medium italic hover:underline">Read More →</a>
+    </div>
+
+    <div class="bg-white rounded-2xl shadow-lg flex flex-col justify-between h-full p-8 hover:shadow-2xl hover:-translate-y-1 transition-all duration-300 ease-in-out">
+      <h3 class="text-2xl font-semibold mb-4 italic">Introduction of C Programming</h3>
+      <p class="text-gray-700 mb-6 italic">C has the power of assembly language with the elegance of assembly language.</p>
+      <a href="https://www.geeksforgeeks.org/c-language-introduction/" class="text-indigo-600 font-medium italic hover:underline">Read More →</a>
+    </div>
+    </div>
+
+
+  </section>
+
+    <section id="faq" class="bg-indigo-400 rounded-2xl py-20 mb-10 text-center hover:shadow-2xl hover:-translate-y-1 transition-all duration-300 ease-in-out px-4 sm:px-6 lg:px-10">
+    <div class=" max-w-3xl mx-auto space-y-6 ">
+    <details class="bg-white rounded-2xl shadow-md p-6 cursor-pointer">
+      <summary class="font-semibold italic text-lg text-gray-800 list-none">
+        What is TechNest?
+      </summary>
+      <p class="mt-4 text-gray-700 italic">
+        TechNest is a mini blog where you can find articles about different topics.
+      </p>
+    </details>
+    <details class="bg-white rounded-2xl shadow-md p-6 cursor-pointer">
+      <summary class="font-semibold text-lg text-gray-800 list-none italic">
+        Whom to contact regarding the queries about TechNest?
+      </summary>
+      <p class="mt-4 text-gray-700 italic">
+        You can find the information in the contact page below.
+      </p>
+    </details>
+    <details class="bg-white rounded-2xl shadow-md p-6 cursor-pointer">
+      <summary class="font-semibold text-lg text-gray-800 list-none italic">
+        Is TechNest free to use?
+      </summary>
+      <p class="mt-4 text-gray-700 italic">
+        Yes! All blog posts currently redirects you to sites where you can read the articles for free.
+      </p>
+    </details>
+  </div>
+  </section>
+
+    <section id="contact" class="bg-indigo-400 rounded-2xl py-20 text-center hover:shadow-2xl hover:-translate-y-1 transition-all duration-300 ease-in-out px-4 sm:px-6 lg:px-10">
+    <h2 class="text-5xl font-bold text-yellow-300 mb-12 text-center italic">Contact Us</h2>
+
+  <div class="max-w-4xl mx-auto bg-white rounded-2xl shadow-lg p-10 text-gray-800">
+    <h3 class="text-3xl font-semibold mb-6 italic">Get in Touch</h3>
+    <p class="mb-4 italic">
+      We'd love to hear from you! Reach out via any of the following:
+    </p>
+    <ul class="space-y-3 italic">
+      <li><strong>Email:</strong> <a href="mailto:contact@technest.com" class="text-indigo-600 hover:underline">contact@technest.com</a></li>
+      <li><strong>Phone:</strong> <a href="tel:+1234567890" class="text-indigo-600 hover:underline">+1 (234) 567-890</a></li>
+      <li><strong>Address:</strong> 123 TechNest Blvd, Silicon Valley, CA</li>
+    </ul>
+  </div>
+  </section>
+</div>
 </body>
 </html>
