--- a/index.html
+++ b/index.html
@@ -89,6 +89,23 @@
     </ul>
   </div>
   </section>
+<button
+    onclick="scrollToTop()"
+    class="fixed bottom-10 right-8 bg-indigo-500 text-white p-5 rounded-full shadow-lg hover:bg-indigo-600 transition"
+    title="Back to Top"
+  >
+    🠅
+  </button>
+<script>
+    function scrollToTop() {
+      window.scrollTo({ top: 0, behavior: 'smooth' });
+    }
+  </script>
 </div>
+<footer class="bg-indigo-500 text-white py-10">
+  <div class="mt-5 text-center text-yellow-300 text-sm font-semibold italic">
+    &copy; 2025 TechNest. All rights reserved.
+  </div>
+</footer>
 </body>
 </html>
